# nighthawk

./: .gitignore  README.md  config.ini  config.json  pyproject.toml
NOTES/: 2023-04-19.md
nighthawk/: add_meta_data.py  app.py  centered_dialog_mixin.py  config.py  merge_audio_and_video.py  properties.json  property_editor.py  property_editor_dialog.py  property_editor_dialog_001.py  property_editor_dialog_002.py  show_about.py
