[tool.poetry]
name = "nighthawk"
version = "0.1.0"
description = ""
authors = ["Anthony Leotta <tony@leotta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.3"
ffmpy = "^0.3.0"
pymp4 = "^1.3.2"
exif = "^1.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
